--- a/src/main/resources/ru/data/anonymization/tool/controller/main-scene.fxml
+++ b/src/main/resources/ru/data/anonymization/tool/controller/main-scene.fxml
@@ -166,6 +166,14 @@
                             <VBox fx:id="masking" spacing="5" alignment="TOP_CENTER"/>
                             <Label text="Универсальные методы обезличивания:" styleClass="labelTitle"/>
                             <VBox fx:id="universalMasking" spacing="5" alignment="TOP_CENTER"/>
+                            <Label text="Синтетические методы" styleClass="labelTitle"/>
+                            <VBox spacing="5" alignment="TOP_CENTER">
+                                <Button text="Bayesian Network"/>
+                                <Button text="GAN"/>
+                                <Button text="VAE"/>
+                                <Button text="Copula"/>
+                                <Button text="LLM"/>
+                            </VBox>
                             <Region VBox.vgrow="ALWAYS"/>
                             <HBox alignment="CENTER_RIGHT" spacing="10">
                                 <Label text="Выборка:" styleClass="labelTitle"/>
