--- a/src/main/resources/ru/data/anonymization/tool/controller/main-scene.fxml
+++ b/src/main/resources/ru/data/anonymization/tool/controller/main-scene.fxml
@@ -168,11 +168,11 @@
                             <VBox fx:id="universalMasking" spacing="5" alignment="TOP_CENTER"/>
                             <Label text="Синтетические методы" styleClass="labelTitle"/>
                             <VBox spacing="5" alignment="TOP_CENTER">
-                                <Button text="Bayesian Network"/>
-                                <Button text="GAN"/>
-                                <Button text="VAE"/>
-                                <Button text="Copula"/>
-                                <Button text="LLM"/>
+                                <Button text="Bayesian Network" prefWidth="200"/>
+                                <Button text="GAN" prefWidth="200"/>
+                                <Button text="VAE" prefWidth="200"/>
+                                <Button text="Copula" prefWidth="200"/>
+                                <Button text="LLM" prefWidth="200"/>
                             </VBox>
                             <Region VBox.vgrow="ALWAYS"/>
                             <HBox alignment="CENTER_RIGHT" spacing="10">
