--- a/src/main/resources/ru/data/anonymization/tool/controller/main-scene.fxml
+++ b/src/main/resources/ru/data/anonymization/tool/controller/main-scene.fxml
@@ -166,14 +166,6 @@
                             <VBox fx:id="masking" spacing="5" alignment="TOP_CENTER"/>
                             <Label text="Универсальные методы обезличивания:" styleClass="labelTitle"/>
                             <VBox fx:id="universalMasking" spacing="5" alignment="TOP_CENTER"/>
-                            <Label text="Синтетические методы" styleClass="labelTitle"/>
-                            <VBox spacing="5" alignment="TOP_CENTER">
-                                <Button text="Bayesian Network" prefWidth="200"/>
-                                <Button text="GAN" prefWidth="200"/>
-                                <Button text="VAE" prefWidth="200"/>
-                                <Button text="Copula" prefWidth="200"/>
-                                <Button text="LLM" prefWidth="200"/>
-                            </VBox>
                             <Region VBox.vgrow="ALWAYS"/>
                             <HBox alignment="CENTER_RIGHT" spacing="10">
                                 <Label text="Выборка:" styleClass="labelTitle"/>
@@ -191,6 +183,22 @@
                                         value="100.0"/>
                                 <Button fx:id="selectionButton" text="Выборка" onAction="#applySelection"/>
                             </HBox>
+                        </VBox>
+                    </ScrollPane>
+                </Tab>
+                <Tab text="Синтез">
+                    <ScrollPane minWidth="400" prefHeight="1" VBox.vgrow="ALWAYS" styleClass="sidebar"
+                                fitToWidth="true">
+                        <VBox spacing="5" style="-fx-padding: 5px;">
+                            <Label text="Синтетические методы" styleClass="labelTitle"/>
+                            <VBox spacing="5" alignment="TOP_CENTER">
+                                <Button text="Bayesian Network" prefWidth="200"/>
+                                <Button text="GAN" prefWidth="200"/>
+                                <Button text="VAE" prefWidth="200"/>
+                                <Button text="Copula" prefWidth="200"/>
+                                <Button text="LLM" prefWidth="200"/>
+                            </VBox>
+                            <Region VBox.vgrow="ALWAYS"/>
                         </VBox>
                     </ScrollPane>
                 </Tab>
