feat: добавить кнопки синтетических методов adsgan, ctgan и pategan

--- a/src/main/resources/ru/data/anonymization/tool/controller/main-scene.fxml
+++ b/src/main/resources/ru/data/anonymization/tool/controller/main-scene.fxml
@@ -193,10 +193,9 @@
                             <Label text="Синтетические методы" styleClass="labelTitle"/>
                             <VBox spacing="5" alignment="TOP_CENTER">
                                 <Button text="Bayesian Network" prefWidth="200" onAction="#runSyntheticMethod"/>
-                                <Button text="GAN" prefWidth="200" onAction="#runSyntheticMethod"/>
-                                <Button text="VAE" prefWidth="200" onAction="#runSyntheticMethod"/>
-                                <Button text="Copula" prefWidth="200" onAction="#runSyntheticMethod"/>
-                                <Button text="LLM" prefWidth="200" onAction="#runSyntheticMethod"/>
+                                <Button text="ADSGAN" prefWidth="200" onAction="#runSyntheticMethod"/>
+                                <Button text="CTGAN" prefWidth="200" onAction="#runSyntheticMethod"/>
+                                <Button text="PATEGAN" prefWidth="200" onAction="#runSyntheticMethod"/>
                             </VBox>
                             <Region VBox.vgrow="ALWAYS"/>
                         </VBox>
