--- a/src/main/resources/ru/data/anonymization/tool/controller/main-scene.fxml
+++ b/src/main/resources/ru/data/anonymization/tool/controller/main-scene.fxml
@@ -193,7 +193,7 @@
                             <Label text="Синтетические методы" styleClass="labelTitle"/>
                             <VBox spacing="5" alignment="TOP_CENTER">
                                 <Button text="Bayesian Network" prefWidth="200" onAction="#runSyntheticMethod"/>
-                                <Button text="ADSGAN" prefWidth="200" onAction="#runSyntheticMethod"/>
+                                <Button text="TGAN" prefWidth="200" onAction="#runSyntheticMethod"/>
                                 <Button text="CTGAN" prefWidth="200" onAction="#runSyntheticMethod"/>
                                 <Button text="PATEGAN" prefWidth="200" onAction="#runSyntheticMethod"/>
                             </VBox>
